--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,10 @@ jobs:
       - name: Install Fly.io CLI
         uses: superfly/flyctl-actions/setup-flyctl@master
 
-      - name: Deploy to Fly.io
+      - name: Login to Fly.io
         env:
           FLY_API_TOKEN: \${{ secrets.FLY_API_TOKEN }}
+        run: flyctl auth login --token \$FLY_API_TOKEN
+
+      - name: Deploy to Fly.io
         run: flyctl deploy --remote-only
