--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "discord-api-types": "^0.38.8",
     "discord.js": "^14.19.3",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "openai": "^4.100.0"
   }
 }
