--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Fly.io
+name: Deploy to Fly.io and Koyeb
 
 on:
   push:
@@ -21,10 +21,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Fly.io CLI
-        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Install Koyeb CLI
+        uses: koyeb/actions/setup@v1
+        with:
+          version: latest
 
-      - name: Deploy to Fly.io
+      - name: Deploy to Koyeb
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl deploy --remote-only --access-token "$FLY_API_TOKEN"
+          KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
+        run: koyeb service redeploy roaster-service --token "$KOYEB_TOKEN" --app roaster-bot
