--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
+    "prod": "pm2-runtime src/index.js --name roaster --watch",
     "dev": "nodemon src/index.js"
   },
   "engines": {
@@ -26,6 +27,7 @@
     "google-auth-library": "^9.15.1",
     "google-spreadsheet": "^4.1.4",
     "nodemon": "^3.1.10",
-    "openai": "^4.100.0"
+    "openai": "^4.100.0",
+    "pm2": "^6.0.6"
   }
 }
