--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,11 @@ jobs:
         run: npm ci
 
       - name: Install Koyeb CLI
-        uses: koyeb/actions@v1
+        uses: koyeb/setup-cli@v1
         with:
           version: latest
 
       - name: Deploy to Koyeb
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
-        run: koyeb service redeploy roaster-service --token "$KOYEB_TOKEN" --app roaster-bot
+        run: koyeb service redeploy gentle-maryann/discord-roast --token "$KOYEB_TOKEN" --app roaster-bot
