--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,20 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install Fly.io CLI
+        uses: superfly/flyctl-actions/setup-flyctl@master
+
+      - name: Deploy to Fly.io
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+        run: flyctl deploy --remote-only --access-token "$FLY_API_TOKEN"
+
       - name: Install Koyeb CLI
-        uses: koyeb/actions@v1
+        uses: koyeb/actions/setup-cli@v1
         with:
           version: latest
 
       - name: Deploy to Koyeb
         env:
           KOYEB_TOKEN: ${{ secrets.KOYEB_TOKEN }}
-        run: koyeb service redeploy gentle-maryann/discord-roast --token "$KOYEB_TOKEN" --app roaster-bot
+        run: koyeb service redeploy gentle-maryann/discord-roast --token "$KOYEB_TOKEN" --app gentle-maryann
